<resources>
    <string name="app_name">ProductDisplay</string>
    <string name="home_tab_test">测试</string>
    <string name="home_tab_db">统计</string>
    <string name="home_tab_adv">资讯</string>
    <string name="gv_text_item1">图片分类</string>
    <string name="gv_text_item2">目标检测</string>
    <string name="gv_text_item3">人脸检测</string>
    <string name="gv_text_item4">更多</string>
    <string name="begin_btn">开始测试</string>
    <string name="end_btn">停止测试</string>
    <string name="classification_begin_guide">图片分类进行中...</string>
    <string name="detection_begin_guide">目标检测进行中...</string>
    <string name="classification_pasue_guide">图片分类暂停中...</string>
    <string name="classification_end_guide">图片分类已停止</string>
    <string name="detection_pasue_guide">目标检测暂停中...</string>
    <string name="classification_data_guide">机器识别图片分类结果显示</string>
    <string name="classification_imge_guide">图片分类:\n\t\t\t\t图片分类会通过特定的训练模型，分类识别图片，按照分类概率高低输出可能的结果列表。</string>
    <string name="newsinfo_title">"寒武纪科技"</string>
    <string name="news_item_foot">"* * * * * * 已浏览全部内容 * * * * * *"</string>
    <string name="newsinfo_recover">"重新加载"</string>
    <string name="classificaton_res_toast">请先导入需要的资源文件</string>
    <string name="test_time">测试时间：</string>
    <string name="test_result">分类结果：</string>
    <string name="test_fps">Fps值：</string>
    <string name="test_fps_units">张/分钟</string>
    <string name="load_model">加载分类模型耗时：</string>
    <string name="classification_chart_title">图片分类fps值(单位：张/分钟)</string>
    <string name="classification_chart_desc">CPU模式图片分类fps值</string>
    <string name="classification_chart_ipu_desc">IPU模式图片分类fps值</string>
    <string name="classification_chart_y">FPS值：张/分钟</string>
    <string name="classification_chart_x">第几次</string>
    <string name="detection_title">目标检测</string>
    <string name="faceDetecte_title">人脸检测</string>
    <string name="detection_end_guide">目标检测已停止</string>
    <string name="detection_load_model">加载检测模型耗时：</string>
    <string name="detection_change_model">切换检测模型耗时：</string>
    <string name="classification_avg_time">平均速率：</string>
    <string name="classification_single_time">平均时间：</string>
    <string name="classification_result">结果详情:点击查看</string>
    <string name="classification_dialog_null">不存在已经分类的图片</string>
    <string name="load_data_detection">正在加载目标检测模型...</string>
    <string name="load_data_over">加载模型完毕。</string>
    <string name="cpu_mode">CPU模式</string>
    <string name="ipu_mode">IPU模式</string>
    <string name="decete_type">网络类型：</string>
    <string name="decete_type_change">切换网络中...</string>
    <string name="face_detection_title_cpu">人脸检测——CPU模式</string>
    <string name="face_detection_title_ipu">人脸检测——IPU模式</string>
    <string name="face_detector_guide">MTCNN方法识别人脸</string>
    <string name="face_detection_begin_guide">人脸检测进行中...</string>
    <string name="face_detection_pasue_guide">人脸检测暂停中...</string>
    <string name="face_detection_end_guide">人脸检测已结束</string>
    <string name="face_detector_function">人脸检测：\n\t\t\t\t是人脸特征点检测,人脸识别的基础.通过MTCNN,检测出图像中存在的人脸,并把它的位置准确地框出来。</string>
    <string name="face_detection_chart_desc">CPU模式人脸检测fps值</string>
    <string name="face_detection_chart_ipu_desc">IPU模式人脸检测fps值</string>
    <string name="face_detection_dialog_null">不存在已经检测的图片</string>
    <string name="more_function_title">功能选择</string>
    <string name="log_tag_classfication">ClassificationActivity</string>
    <string name="end_testing">检测结束</string>
    <string name="ms">ms</string>
    <string name="IPU_mode">IPU_mode</string>
    <string name="CPU_mode">CPU_mode</string>
    <string name="exit">再按一次退出程序</string>
    <string name="detection_result">图片目标检测结果显示</string>
    <string name="detection_introduce">目标检测：\n\t\t\t\t通过特定的训练模型，不仅仅要识别出来是什么物体，而且还要预测物体的位置。
    <string name="facedetect_guide">人脸识别检测结果显示</string>
    </string>







</resources>
