<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/test_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/classification_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/load_caffe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_model"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_below="@id/load_caffe"
                android:id="@+id/test_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_result"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_below="@id/test_result"
                android:id="@+id/test_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_time"
                android:textColor="@android:color/white"/>
            <Button
                android:id="@+id/classification_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/test_begin_btn"/>
            <Button
                android:id="@+id/classification_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/end_btn" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@mipmap/image_bg">
            <ImageView
                android:id="@+id/classification_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ad_2"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:paddingBottom="20dp"
                android:scaleType="centerInside"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>