<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="52dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/main_line"
        android:divider="@drawable/divider_line"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:text="IPU模式(ResNet50/101)"/>

            <TextView
                android:id="@+id/avg_ipu_fps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:text="@string/classification_avg_time" />

            <TextView
                android:id="@+id/avg_ipu_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_gravity="center_vertical"
                android:text="@string/classification_single_time" />

            <Button
                android:id="@+id/all_ipu_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:text="@string/classification_result" />
        </LinearLayout>
        <View
            android:layout_width="2px"
            android:layout_height="match_parent"
            android:background="@android:color/white" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:text="CPU模式(ResNet50/101)"/>

            <TextView
                android:id="@+id/avg_fps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:text="@string/classification_avg_time" />

            <TextView
                android:id="@+id/avg_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_gravity="center_vertical"
                android:text="@string/classification_single_time" />

            <Button
                android:id="@+id/all_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:text="@string/classification_result" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#000000" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="@color/main_line"
        android:textSize="@dimen/text_chart_title"
        android:background="@android:color/white"
        android:text="@string/classification_chart_title"/>

    <LinearLayout
        android:id="@+id/chart_line"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>