<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mydrawer">
        <!--主内容区域-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rel_navigate"
                android:layout_alignParentBottom="true">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_tab_test"
                    android:button="@null"
                    android:gravity="center"
                    android:id="@+id/tab_test"
                    android:padding="10dp"
                    android:drawableTop="@drawable/dl_settings"
                    android:checked="true"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_tab_db"
                    android:button="@null"
                    android:padding="10dp"
                    android:gravity="center"
                    android:id="@+id/tab_data"
                    android:drawableTop="@drawable/dl_settings"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_tab_adv"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="10dp"
                    android:id="@+id/tab_adv"
                    android:drawableTop="@drawable/dl_settings"/>
            </RadioGroup>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="50dp"
                android:layout_above="@id/rel_navigate"
                android:id="@+id/main_content">
            </FrameLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:id="@+id/rel_menu"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:background="#fff">
            <ImageView
                android:id="@+id/header_drawer"
                android:background="@color/main_line"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
            <RelativeLayout
                android:id="@+id/cpu_mode"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="20dp"
                    android:text="CPU模式"/>
                <com.cambricon.productdisplay.view.SwitchButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingRight="20dp">
                </com.cambricon.productdisplay.view.SwitchButton>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/ipu_mode"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="20dp"
                    android:text="IPU模式"/>
                <com.cambricon.productdisplay.view.SwitchButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingRight="20dp">
                </com.cambricon.productdisplay.view.SwitchButton>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="20dp"
                android:text="关于我们"/>
        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>
</RelativeLayout>